# python_coding_challenge

./: .gitignore  README.md  counting_sheep.ipynb  prueba.py  pyproject.toml  python_coding_challenge.py  sample.in  sample_out.ans  test1_out.ans  test2_out.ans  test3.in  test3_out.ans
.ipynb_checkpoints/: counting_sheep-checkpoint.ipynb
context/: counting_sheep.ipynb
inputs/: test3.in
notebooks/: 01_counting_sheep_implementation.ipynb
src/: metrics.py  sheepfunctions.py
